--- a/namaspamus.html
+++ b/namaspamus.html
@@ -28,8 +28,9 @@
 					<h3 class="content__title">Namaspamus</h3>
 					<p class="content__desc">
 					Dimanche @ 22h<br><br>
-					Le lyonnais Bruno “Patchworks” Hovart est un producteur hyperactif qui ne s’accroche ni à un style musical, ni à un alias. 
-					Il a dévoilé en 2015 VOILAAA, projet afro-disco sur le label Favorite Recordings. Groovy, son album “On te l’avait dit” sonne comme un hymne aux plus belles années de la disco, nous replongeant au cœur des années 1970 de Lagos ou Abidjan. VOILAAA Sound System, c’est le collectif qui l’entoure pour des sets sound system furieux, afro, disco et moites, inspirés de l’esprit “Notting Hill”.
+					Bière qui coule, transpire la mousse ! 
+					Le groupe Franco-Berlinois qui fait tomber les murs et la retenue. 
+					Partis du rock des années 70, ils évoluent vers un rock plus actuel au fil de leurs multiples concerts berlinois et parisiens ainsi que de leur rencontre avec d’autres musiciens de renoms (hyphen-hyphen, Laura Cox, Patrick Rondat, Julien Bitoun). Que ce soit par des reprises ou leurs différentes compos, c’est sur un rock classique popisant et dans une ambiance plutôt punk que Namaspamus vous fera frissonner les dessous de bras.
 					<br><br>
 					<a href="https://www.facebook.com/NamaspamusParis/" target="blank">Facebook</a><br>
 					<a href="https://www.instagram.com/namaspamusParis/" target="blank">Instagram</a><br>
@@ -41,7 +42,7 @@
 			<div class="footer__container">
 				<div class="footer__container-contact">
 					<h2>Contact</h2>
-					<a href="mailto:stopandgosp@gmail.com">stopandgosp@gmail.com</a>
+					<a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
 					<a href="https://m.me/stopandgo.sciencespo" target="blank">messenger</a>
 					<a href="https://www.facebook.com/stopandgo.sciencespo" target="blank">facebook</a>
 					<!--<a href="#" target="blank">instgagram</a>-->
