--- a/index.html
+++ b/index.html
@@ -79,28 +79,12 @@
 			<section class="content content--progra">
 				<h3 class="content__progra-title">Programmation</h3>
 				<div class="grille">
-	
-					<a class="content__progra-item" href="cactus-mammuth.html">
-						<img class="content__progra-img" src="img/groupes/cactus-mammuth.jpg">
-						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Cactus et Mammuth</h3>
-							<p class="content__progra-date">10 mai 20h</p>
-						</div>
-					</a>
 
-					<a class="content__progra-item" href="edgar-deception.html">
-						<img class="content__progra-img" src="img/groupes/edgar-deception.jpg">
+					<a class="content__progra-item" href="z-fabulous-orchestra.html">
+						<img class="content__progra-img" src="img/groupes/z-fabulous-orchestra.png">
 						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Edgar Déception</h3>
-							<p class="content__progra-date">10 mai 20h</p>
-						</div>
-					</a>
-
-					<a class="content__progra-item" href="ovhal.html">
-						<img class="content__progra-img" src="img/groupes/ovhal.jpg">
-						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Ovhal44</h3>
-							<p class="content__progra-date">10 mai 20h</p>
+							<h3 class="content__progra-name">Z Fabulous Orchestra</h3>
+							<p class="content__progra-date">30 mai 20:30 - 21:30</p>
 						</div>
 					</a>
 
@@ -108,23 +92,7 @@
 						<img class="content__progra-img" src="img/groupes/les-agites.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Les Agités du Bocal</h3>
-							<p class="content__progra-date">10 mai 20h</p>
-						</div>
-					</a>
-
-					<a class="content__progra-item" href="voilaaa-soundsystem.html">
-						<img class="content__progra-img" src="img/groupes/voilaaa-soundsystem.png">
-						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Voilaaa Soundsystem</h3>
-							<p class="content__progra-date">10 mai 20h</p>
-						</div>
-					</a>
-
-					<a class="content__progra-item" href="namaspamus.html">
-						<img class="content__progra-img" src="img/groupes/namaspamus.png">
-						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Namaspamus</h3>
-							<p class="content__progra-date">10 mai 20h</p>
+							<p class="content__progra-date">30 mai, 22:00 - 23:00</p>
 						</div>
 					</a>
 
@@ -132,15 +100,47 @@
 						<img class="content__progra-img" src="img/groupes/nootkatone.png">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Nootkatone</h3>
-							<p class="content__progra-date">10 mai 20h</p>
+							<p class="content__progra-date">30 mai, 23:30 - 00:30</p>
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="z-fabulous-orchestra.html">
-						<img class="content__progra-img" src="img/groupes/z-fabulous-orchestra.png">
+					<a class="content__progra-item" href="ovhal.html">
+						<img class="content__progra-img" src="img/groupes/ovhal.jpg">
 						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Z Fabulous Orchestra</h3>
-							<p class="content__progra-date">10 mai 20h</p>
+							<h3 class="content__progra-name">Ovhal44</h3>
+							<p class="content__progra-date">31 mai, 1:00 - 2:00</p>
+						</div>
+					</a>
+
+					<a class="content__progra-item" href="edgar-deception.html">
+						<img class="content__progra-img" src="img/groupes/edgar-deception.jpg">
+						<div class="content__progra-infos">
+							<h3 class="content__progra-name">Edgar Déception</h3>
+							<p class="content__progra-date">31 mai, 20:30 - 21:30</p>
+						</div>
+					</a>
+
+					<a class="content__progra-item" href="namaspamus.html">
+						<img class="content__progra-img" src="img/groupes/namaspamus.png">
+						<div class="content__progra-infos">
+							<h3 class="content__progra-name">Namaspamus</h3>
+							<p class="content__progra-date">31 mai, 22:00 - 23:00</p>
+						</div>
+					</a>
+
+					<a class="content__progra-item" href="voilaaa-soundsystem.html">
+						<img class="content__progra-img" src="img/groupes/voilaaa-soundsystem.png">
+						<div class="content__progra-infos">
+							<h3 class="content__progra-name">Voilaaa Soundsystem</h3>
+							<p class="content__progra-date">31 mai, 23:30 - 1:30</p>
+						</div>
+					</a>
+
+					<a class="content__progra-item" href="cactus-mammuth.html">
+						<img class="content__progra-img" src="img/groupes/cactus-mammuth.jpg">
+						<div class="content__progra-infos">
+							<h3 class="content__progra-name">Cactus et Mammuth</h3>
+							<p class="content__progra-date">1er juin, 2:00 - fin</p>
 						</div>
 					</a>
 
@@ -156,7 +156,7 @@
 			<div class="footer__container">
 				<div class="footer__container-contact">
 					<h2>Contact</h2>
-					<a href="mailto:stopandgosp@gmail.com">stopandgosp@gmail.com</a>
+					<a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
 					<a href="https://m.me/stopandgo.sciencespo" target="blank">messenger</a>
 					<a href="https://www.facebook.com/stopandgo.sciencespo" target="blank">facebook</a>
 					<!--<a href="#" target="blank">instgagram</a>-->
