--- a/nootkatone.html
+++ b/nootkatone.html
@@ -43,7 +43,7 @@
 			<div class="footer__container">
 				<div class="footer__container-contact">
 					<h2>Contact</h2>
-					<a href="mailto:stopandgosp@gmail.com">stopandgosp@gmail.com</a>
+					<a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
 					<a href="https://m.me/stopandgo.sciencespo" target="blank">messenger</a>
 					<a href="https://www.facebook.com/stopandgo.sciencespo" target="blank">facebook</a>
 					<!--<a href="#" target="blank">instgagram</a>-->
