--- a/billetterie.html
+++ b/billetterie.html
@@ -14,13 +14,13 @@
 		<main>
 			<div class="content content--fixed">
 				<header class="header">
-					<h1 class="header__title"><a href="index.html">HIT THE ROAD</a></h1>
-					<h1 class="header__subtitle">30 mai - 1er juin 2020</h1>
+					<h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
+					<h1 class="header__subtitle">30 mai - 1er juin</h1>
 				</header>
 			
 				<div class="menu">
 					<a href="billetterie.html"><h4 class="menu__title-selected">Billetterie</h4></a>
-					<a href="index.html#progra"><h4 class="menu__title">Porgrammation</h4></a>
+					<a href="index.html#progra"><h4 class="menu__title">Programmation</h4></a>
 				</div>
 			</div>	
 
