--- a/voilaaa-soundsystem.html
+++ b/voilaaa-soundsystem.html
@@ -19,7 +19,7 @@
 				</header>
 			
 				<div class="menu">
-					<a href="Billetterie.html"><h4 class="menu__title">Billetterie</h4></a>
+					<a href="billetterie.html"><h4 class="menu__title">Billetterie</h4></a>
 					<a href="index.html#progra"><h4 class="menu__title">Programmation</h4></a>
 				</div>
 			</div>
