--- a/billetterie.html
+++ b/billetterie.html
@@ -16,6 +16,7 @@
 				<header class="header">
 					<h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
 					<h1 class="header__subtitle">30 mai - 1er juin</h1>
+					<h4 class="header__slogan">—  concerts & autostop  —</h4>
 				</header>
 			
 				<div class="menu">
@@ -27,7 +28,7 @@
 			<div class="content-wrap-2" style="margin-top: 200px;">
 				<div class="content content--layout content--layout-5">
 					<h3 class="content__title">Tickets 3 jours</h3>
-					<p class="content__desc" style="padding-top: 0">Le ticket 3 jours est valable du samedi 30 Mai au lundi 1er Juin. Ce ticket coûte 33 euros en early birds et 38 euros pour les moins rapides.
+					<p class="content__desc">Le ticket 3 jours est valable du samedi 30 Mai au lundi 1er Juin. Ce ticket coûte 33 euros en early birds et 38 euros pour les moins rapides.
 					<br><br>
 					<b>En plus de l’accès au festival, les tickets 3 jours comprennent :</b>
 						<ul class="content__list">
@@ -48,7 +49,7 @@
 			<div class="content-wrap-2">
 				<div class="content content--layout content--layout-5">
 					<h3 class="content__title">Tickets 1 jour</h3>
-					<p class="content__desc" style="padding-top: 0">Le ticket 1 jours est valable pour le jour choisi uniquement :
+					<p class="content__desc">Le ticket 1 jours est valable pour le jour choisi uniquement :
 					<br><br><u>Ticket 1 jour samedi</u> - Accès au festival du samedi 11h au dimanche 11h.
 					<br><u>Ticket 1 jour dimanche</u> - Accès au festival du dimanche 11h au lundi 11h.
 					<br><br>Ce ticket coûte 17 euros en early birds et 19 euros pour les moins rapides. 
@@ -73,7 +74,7 @@
 			<div class="content-wrap-2">
 				<div class="content content--layout content--layout-5">
 					<h3 class="content__title">Tickets 1 soirée</h3>
-					<p class="content__desc" style="padding-top: 0">Le ticket 1 soirée est valable pour la soirée choisie uniquement :
+					<p class="content__desc">Le ticket 1 soirée est valable pour la soirée choisie uniquement :
 					<br><br><u>Ticket 1 soirée samedi</u> - Accès au festival du samedi 18h au dimanche 2h.
 					<br><u>Ticket 1 soirée dimanche</u> - Accès au festival du dimanche 18h au lundi 2h.
 					<br><br>Ce ticket coûte 13 euros.  
@@ -87,7 +88,25 @@
 					</p>
 					<a class="content__rsv" href="#">Réserver maintenant</a>
 				</div>
-			</div>		
+			</div>
+
+			<div class="footer__container">
+				<div class="footer__container-contact">
+					<h2>Contact</h2>
+					<a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
+					<a href="https://m.me/stopandgo.sciencespo" target="blank">messenger</a>
+					<a href="https://www.facebook.com/stopandgo.sciencespo" target="blank">facebook</a>
+					<!--<a href="#" target="blank">instgagram</a>-->
+				</div>
+				<div class="footer__container-partenaires">
+					<h2>Partenaires</h2>
+					<a href="http://www.crous-paris.fr/" target="blank"><img src="img/sponsors/crous.png"></a>
+					<a href="https://assopaves.org/cafes" target="blank"><img src="img/sponsors/cafes.png"></a>
+					<a href="https://stopandgosp.wixsite.com/" target="blank"><img src="img/sponsors/stop_and_go.png"></a>
+					<a href="https://www.pissedebout.fr/" target="blank"><img src="img/sponsors/pisse_debout.png"></a>
+					<a href="https://assopaves.org/" target="blank"><img src="img/sponsors/paves.png"></a>
+				</div>	
+			</div>			
 
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
