--- a/nootkatone.html
+++ b/nootkatone.html
@@ -16,6 +16,7 @@
 				<header class="header">
 					<h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
 					<h1 class="header__subtitle">30 mai - 1er juin</h1>
+					<h4 class="header__slogan">—  concerts & autostop  —</h4>
 				</header>
 			
 				<div class="menu">
