--- a/les-agites.html
+++ b/les-agites.html
@@ -52,9 +52,9 @@
 				<div class="footer__container-contact">
 					<h2>Contact</h2>
 					<a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
-					<a href="https://m.me/stopandgo.sciencespo" target="blank">messenger</a>
-					<a href="https://www.facebook.com/stopandgo.sciencespo" target="blank">facebook</a>
-					<!--<a href="#" target="blank">instgagram</a>-->
+					<a href="https://m.me/festivalhittheroad" target="blank">messenger</a>
+					<a href="https://www.facebook.com/festivalhittheroad" target="blank">facebook</a>
+					<a href="https://www.instagram.com/festivalhittheroad/" target="blank">instagram</a>
 				</div>
 				<div class="footer__container-partenaires">
 					<h2>Partenaires</h2>
